test/checker/register/invalid/no_such_native_type.km
module NoSuchNativeType;

type Baz  native 'covfefe';
